Fixed colors and positioning on products
Will convert all "px" to "rem" later on

--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
       </ul>
     </nav>
     <div class="get-quote-button">
-      <a href="#" class="quote-button">GET A QUOTE</a>
-    </div>
+      <a href="#" class="quote-button">GET A QUOTE</a    </div>
   </div>
 </header>
 
@@ -45,7 +44,7 @@
 </section>
 
 <section class="main">
-  <h2>Our Products</h2>
+  <h2>Our products</h2>
   <div class="product-grid">
     <div class="product-item">
       <img src="assets/image-outline.svg" alt="Product 1">
@@ -70,6 +69,5 @@
     <!-- Add more product items as needed -->
   </div>
 </section>
-
 </body>
 </html>
