--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@500&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Your Website</title>
@@ -9,65 +12,103 @@
   <link rel="stylesheet" href="normalize.css">
   <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
 
-<header>
-  <div class="header-center">
-    <div class="header-logo">
-      <img src="assets/zocom-logo 1.svg" alt="Logo" class="logo-img">
+  <header>
+    <div class="header-center">
+      <div class="header-logo">
+        <img src="assets/zocom-logo 1.svg" alt="Logo" class="logo-img">
+      </div>
+      <nav class="header-nav">
+        <ul>
+          <li><a href="#" class="selected-header-item">HOME</a></li>
+          <li><a href="#">HOW IT WORKS</a></li>
+          <li><a href="#">FEATURES</a></li>
+          <li><a href="#">PRESS</a></li>
+          <li><a href="#">PRICING</a></li>
+          <li><a href="#">CONTACT</a></li>
+        </ul>
+      </nav>
+      <div class="get-quote-button">
+        <a href="#" class="quote-button">GET A QUOTE</a>
+      </div>
     </div>
-    <nav class="header-nav">
-      <ul>
-        <li><a href="#">HOME</a></li>
-        <li><a href="#">HOW IT WORKS</a></li>
-        <li><a href="#">FEATURES</a></li>
-        <li><a href="#">PRESS</a></li>
-        <li><a href="#">PRICING</a></li>
-        <li><a href="#">CONTACT</a></li>
-      </ul>
-    </nav>
-    <div class="get-quote-button">
-      <a href="#" class="quote-button">GET A QUOTE</a    </div>
-  </div>
-</header>
+    <div class="hero">
+      <h1>Download our App</h1>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse vel<br>eleifend diam, tempus accumsan
+        neque. Praesent quis dolor.</p>
+      <div class="hero-buttons">
+        <a href="#"><img src="assets/App store btn.svg" alt="App Store"></a>
+        <a href="#"><img src="assets/Google play btn.svg" alt="Google Play"></a>
+      </div>
+      <div class="phone-image">
+        <img src="assets/phone.svg" alt="Phone">
+      </div>
+    </div>
+  </header>
 
-<section class="download-app">
-  <h1>Download our App</h1>
-  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse vel<br>eleifend diam, tempus accumsan neque. Praesent quis dolor.</p>
-  <div class="app-buttons">
-    <a href="#" class="app-store-btn"><img src="assets/App store btn.svg" alt="App Store"></a>
-    <a href="#" class="google-play-btn"><img src="assets/Google play btn.svg" alt="Google Play"></a>
-  </div>
-  <div class="phone-image">
-    <img src="assets/phone.svg" alt="Phone">
-  </div>
-</section>
+  <section class="main">
+    <h2>Our products</h2>
+    <div class="product-grid">
+      <div class="product-item">
+        <img src="assets/image-outline.svg" alt="Product 1">
+        <h3>Product 1</h3>
+        <p>$19.99</p>
+      </div>
+      <div class="product-item">
+        <img src="assets/image-outline.svg" alt="Product 2">
+        <h3>Product 2</h3>
+        <p>$29.99</p>
+      </div>
+      <div class="product-item">
+        <img src="assets/image-outline.svg" alt="Product 3">
+        <h3>Product 3</h3>
+        <p>$39.99</p>
+      </div>
+      <div class="product-item">
+        <img src="assets/image-outline.svg" alt="Product 4">
+        <h3>Product 4</h3>
+        <p>$49.99</p>
+      </div>
+    </div>
+    <div class="category-grid">
+      <div class="category-item">
+        <h3>Collection</h3>
+        <h4>Summer 2021</h4>
+        <a href="#">Check it out</a>
+      </div>
+      <div class="category-item">
+        <h3>Collection</h3>
+        <h4>Summer 2021</h4>
+        <a href="#">Check it out</a>
+      </div>
+    </div>
+  </section>
 
-<section class="main">
-  <h2>Our products</h2>
-  <div class="product-grid">
-    <div class="product-item">
-      <img src="assets/image-outline.svg" alt="Product 1">
-      <h3>Product 1</h3>
-      <p>$19.99</p>
+  <footer>
+    <div class="footer-content">
+      <div class="footer-item footer-item-right">
+        <h3>Contact us</h3>
+        <h4>We'd love to hear from you</h4>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse vel eleifend diam, tempus accumsan neque.</p>
+        <ul>
+          <li>
+            <img src="assets/navigate-outline 1.svg" alt="Navigate icon">
+            <a href="http://maps.google.com/?q=Vallgatan 25, Göteborg" target="_blank">Vallgatan 25, Göteborg</a>
+          </li>
+          <li>
+            <img src="assets/call-outline 1.svg" alt="Call icon">
+            <a href="tel: +46 31 123 456 7" target="_blank">031 123 456 7</a>
+          </li>
+          <li>
+            <img src="assets/mail-outline 1.svg" alt="E-Mail icon">
+            <a href="mailto: info@zocom.se" target="_blank">info@zocom.se</a>
+          </li>
+        </ul>
+      </div>
     </div>
-    <div class="product-item">
-      <img src="assets/image-outline.svg" alt="Product 2">
-      <h3>Product 2</h3>
-      <p>$29.99</p>
-    </div>
-    <div class="product-item">
-      <img src="assets/image-outline.svg" alt="Product 3">
-      <h3>Product 3</h3>
-      <p>$39.99</p>
-    </div>
-    <div class="product-item">
-      <img src="assets/image-outline.svg" alt="Product 4">
-      <h3>Product 4</h3>
-      <p>$49.99</p>
-    </div>
-    <!-- Add more product items as needed -->
-  </div>
-</section>
+  </footer>
 </body>
+
 </html>
