--- a/index.html
+++ b/index.html
@@ -54,23 +54,23 @@
     <div class="product-grid">
       <div class="product-grid__item">
         <img src="assets/image-outline.svg" alt="Product 1">
-        <h3>Product 1</h3>
-        <p>$19.99</p>
+        <h3>Green Cap</h3>
+        <p>US$29</p>
       </div>
       <div class="product-grid__item">
         <img src="assets/image-outline.svg" alt="Product 2">
-        <h3>Product 2</h3>
-        <p>$29.99</p>
+        <h3>Zara shirt</h3>
+        <p>US$19.90</p>
       </div>
       <div class="product-grid__item">
         <img src="assets/image-outline.svg" alt="Product 3">
-        <h3>Product 3</h3>
-        <p>$39.99</p>
+        <h3>Nike Air</h3>
+        <p>US$34</p>
       </div>
       <div class="product-grid__item">
         <img src="assets/image-outline.svg" alt="Product 4">
-        <h3>Product 4</h3>
-        <p>$49.99</p>
+        <h3>Nerd tshirt</h3>
+        <p>US$9.99</p>
       </div>
     </div>
     <div class="category-grid">
