--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Your Website</title>
+  <title>Philip_FE23_individuell-examination</title>
   <link rel="stylesheet" href="reset.css">
   <link rel="stylesheet" href="normalize.css">
   <link rel="stylesheet" href="styles.css">
@@ -36,8 +36,8 @@
         <a href="#" class="header-content__button">GET A QUOTE</a>
     </div>
     <div class="hero">
-      <h1>Download our App</h1>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse vel eleifend diam, tempus accumsan
+      <h1 class="hero__title">Download our App</h1>
+      <p class="hero__subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse vel eleifend diam, tempus accumsan
         neque. Praesent quis dolor.</p>
       <div class="hero__buttons">
         <a href="#"><img src="assets/App store btn.svg" alt="App Store"></a>
@@ -50,39 +50,39 @@
   </header>
 
   <section class="main">
-    <h2>Our products</h2>
+    <h2 class="main__title">Our products</h2>
     <div class="product-grid">
       <div class="product-grid__item">
         <img src="assets/image-outline.svg" alt="Product 1">
-        <h3>Green Cap</h3>
-        <p>US$29</p>
+        <h3 class="product-grid__item-title">Green Cap</h3>
+        <p class="product-grid__item-subtitle">US$29</p>
       </div>
       <div class="product-grid__item">
         <img src="assets/image-outline.svg" alt="Product 2">
-        <h3>Zara shirt</h3>
-        <p>US$19.90</p>
+        <h3 class="product-grid__item-title">Zara shirt</h3>
+        <p class="product-grid__item-subtitle">US$19.90</p>
       </div>
       <div class="product-grid__item">
         <img src="assets/image-outline.svg" alt="Product 3">
-        <h3>Nike Air</h3>
-        <p>US$34</p>
+        <h3 class="product-grid__item-title">Nike Air</h3>
+        <p class="product-grid__item-subtitle">US$34</p>
       </div>
       <div class="product-grid__item">
         <img src="assets/image-outline.svg" alt="Product 4">
-        <h3>Nerd tshirt</h3>
-        <p>US$9.99</p>
+        <h3 class="product-grid__item-title">Nerd tshirt</h3>
+        <p class="product-grid__item-subtitle">US$9.99</p>
       </div>
     </div>
     <div class="category-grid">
       <div class="category-grid__item">
-        <h3>Collection</h3>
-        <h4>Summer 2021</h4>
-        <a href="#">Check it out</a>
+        <h3 class="category-grid__item-title">Collection</h3>
+        <h4 class="category-grid__item-subtitle">Summer 2021</h4>
+        <a href="#" class="category-grid__item--btn">Check it out</a>
       </div>
       <div class="category-grid__item">
-        <h3>Collection</h3>
-        <h4>Summer 2021</h4>
-        <a href="#">Check it out</a>
+        <h3 class="category-grid__item-title">Collection</h3>
+        <h4 class="category-grid__item-subtitle">Summer 2021</h4>
+        <a href="#" class="category-grid__item--btn">Check it out</a>
       </div>
     </div>
   </section>
@@ -90,9 +90,9 @@
   <footer>
     <div class="footer-content">
       <div class="footer-content__item footer-content__item--right">
-        <h3>Contact us</h3>
-        <h4>We'd love to hear from you</h4>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse vel eleifend diam, tempus accumsan neque.</p>
+        <h3 class="footer-content__item-title">Contact us</h3>
+        <h4 class="footer-content__item-subtitle">We'd love to hear from you</h4>
+        <p class="footer-content__item-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse vel eleifend diam, tempus accumsan neque.</p>
         <ul>
           <li>
             <img src="assets/navigate-outline 1.svg" alt="Navigate icon">
